added new changes

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5050
 NODE_ENV=development
 DATABASE_CONNECTION=mongodb+srv://pankajtalukdar08:fuSek98f8PC0UtrM@huskify.3lko6.mongodb.net/?retryWrites=true&w=majority&appName=huskify
+JWT_SECRET=your_jwt_secret_key
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
